# mov-cli-youtube

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: codeberg.yaml  plugin_test.yml  ruff.yml
mov_cli_test/: __init__.py  scraper.py
mov_cli_youtube/: __init__.py  media.py  pytube.py  scraper.py  youtube.py  yt_dlp.py
scripts/: test.py
